HDI korrigiert und verschönert
(hoffentlich ist nichts kaputt gegangen)
zusätzlich kleine Änderungen und Verweise

--- a/Vorlesungen/vl_11.tex
+++ b/Vorlesungen/vl_11.tex
@@ -233,14 +233,15 @@
 	\end{itemize}
 }\end{Bemerkung}
 
-\begin{Satz}{
+\begin{Satz}
+	\label{vl_11_satz_25}
 	Für $f,g \in \mathcal{R}_{[a,b]}$ gilt:
 	\begin{itemize}
 		\item $f \cdot g \in \mathcal{R}_{[a,b]}$
 		\item $\abs{f} \in \mathcal{R}_{[a,b]}$ und $\int_a^b \abs{f} \dd{x} 
 		\geq \abs{\int_a^b f \dd{x}}$
 	\end{itemize}
-}\end{Satz}
+\end{Satz}
 
 \begin{proof}
 	Sei $\Phi : \mathbb{R} \rightarrow  \mathbb{R}, t \mapsto t^2$. \\
@@ -270,6 +271,7 @@
 \end{proof}
 
 \begin{Satz}[Mittelwertsatz der Integralrechnung]{
+	\label{satz:mws_integral}
 	Seien $f,g: [a,b] \rightarrow \mathbb{R}$ stetig und 
 	$g(x) \geq 0$ $(x \in[a,b])$. \\
 	(Abbildung~\ref{plot_MWS_int}) 
