--- a/Vorlesungen/vl_22.tex
+++ b/Vorlesungen/vl_22.tex
@@ -149,12 +149,12 @@ Konzepte:
 	$U$ für jedes $x \in U$ eine Umgebung ist.
 	Das heißt $U \subseteq X$ ist offen, wenn für alle $x \in U$ ein $r_x > 0$ 
 	existiert, mit $B_{r_x}(x) \subseteq U$. 
-	$A \subseteq X$ ist \emph{abgeschlossen}, wenn $X \setminus\ A$ offen ist. 
+	$A \subseteq X$ heißt \emph{abgeschlossen}, wenn $X \setminus\ A$ offen ist. 
 }\end{Definition}
 
 \begin{Bemerkung}~
 	\begin{itemize}
-		\item Es gibt Mengen die weder offen, noch abgeschlossen sind. $(0,1]$
+		\item Es gibt Mengen die weder offen, noch abgeschlossen sind -- z.B.  $(0,1]$
 		\item Es gibt auch Mengen, die sowohl offen, als auch abgeschlossen sind:
 		$\IR, \emptyset$
 	\end{itemize}
