--- a/gesamt.tex
+++ b/gesamt.tex
@@ -49,6 +49,8 @@
     \newtheorem{Lemma}{Lemma}[section]
     \theoremstyle{plain}
 
+    \newtheorem*{Beispiel*}{Beispiel}
+
     %\newtheorem*{Beweis}{Beweis}
     %\theoremstyle{proof}
 
@@ -123,6 +125,7 @@
 \input{Vorlesungen/vl_22}
 \input{Vorlesungen/vl_23}
 \input{Vorlesungen/vl_24}
+\input{Vorlesungen/vl_25}
 \clearpage
 \printindex
 \end{document}
