--- a/klausurbemerkungen.tex
+++ b/klausurbemerkungen.tex
@@ -6,7 +6,7 @@
 	\item \textcolor{blue}{\hyperref[regel_von_hospital]{Regel von l'Hospital}}
 	\item \textcolor{red}{\hyperref[satz_von_taylor]{Satz von Taylor}}
 	\item \textcolor{red}{\hyperref[vl_12_satz_01]{Hauptsatz der Differential- und Integral-Rechnung}}
-	\item \textcolor{red}{\hyperref[def:glm_konv]{Gleichmäßiger Limes stetiger Funktionen ist stetig}}
+	\item \textcolor{red}{\hyperref[vl_17_satz_2]{Gleichmäßiger Limes stetiger Funktionen ist stetig}}
 	\item \textcolor{blue}{Satz von Heine-Borel}
 	\item \textcolor{blue}{Banach'scher Fixpunktsatz}
 \end{itemize}
