Link zu Klausurbemerkungen hinzugefügt

--- a/klausurbemerkungen.tex
+++ b/klausurbemerkungen.tex
@@ -7,7 +7,7 @@
 	\item \textcolor{red}{\hyperref[satz_von_taylor]{Satz von Taylor}}
 	\item \textcolor{red}{\hyperref[vl_12_satz_01]{Hauptsatz der Differential- und Integral-Rechnung}}
 	\item \textcolor{red}{\hyperref[vl_17_satz_2]{Gleichmäßiger Limes stetiger Funktionen ist stetig}}
-	\item \textcolor{blue}{Satz von Heine-Borel}
+	\item \textcolor{blue}{\hyperref[satz_v_heine_borel]{Satz von Heine-Borel}}
 	\item \textcolor{blue}{Banach'scher Fixpunktsatz}
 \end{itemize}
 \textcolor{cyan}{Keine Hilfsmittel!}\\
