--- a/Plots/plot_integral_partition.tex
+++ b/Plots/plot_integral_partition.tex
@@ -1,5 +1,5 @@
 \begin{figure}[ht]
-\centering
+       \tikzsetnextfilename{plot_integral_partition}
 	\begin{tikzpicture}
 		\draw[very thin, gray, step = 0.5] (-0.9,-0.9) grid (4.9,2.9);
 		\draw[->,thick, black](-1,0) -- (5,0) node[right]{x};
