--- a/Plots/plot_integral_zwei_fkt.tex
+++ b/Plots/plot_integral_zwei_fkt.tex
@@ -1,19 +1,9 @@
-\documentclass[10pt,a4paper]{article}
-\usepackage[utf8]{inputenc}
-\usepackage[german]{babel}
-\usepackage[T1]{fontenc}
-\usepackage{amsmath}
-\usepackage{amsfonts}
-\usepackage{amssymb}
-\usepackage{tikz}
-\begin{document}
 \begin{figure}
+	\tikzsetnextfilename{plot_integral_zwei_fkt}
 	\begin{tikzpicture}
 		\draw[very thin, gray, step = 0.5] (-0.9,-0.9) grid (3.9,3.4);
 		\draw[blue, domain = 0 :1.5]  
 			plot(\x, \x + 1);
 		\draw[red, domain = 0 : 1.5] plot(\x,2*\x);	
-	
 	\end{tikzpicture}
 \end{figure}
-\end{document}
