--- a/Plots/plot_integral_partition.tex
+++ b/Plots/plot_integral_partition.tex
@@ -1,6 +1,7 @@
 \begin{figure}[ht]
        \tikzsetnextfilename{plot_integral_partition}
-	\begin{tikzpicture}
+       \begin{center}
+       \begin{tikzpicture}
 		\draw[very thin, gray, step = 0.5] (-0.9,-0.9) grid (4.9,2.9);
 		\draw[->,thick, black](-1,0) -- (5,0) node[right]{x};
 		\draw[->,thick, black](0,-1) -- (0,3) node[above]{y};
@@ -17,6 +18,7 @@
        	\draw[black,thick](2.5,0) -- (2.5, 2.37);
        	\node at (4,1.5){$\int_a^b f$};
 	\end{tikzpicture}
+       \end{center}
 	\caption{Partition}
 	\label{fig_int_partition}
 \end{figure}
