Grafiken aufgehübscht und input-bug behoben

--- a/Plots/plot_MWS.tex
+++ b/Plots/plot_MWS.tex
@@ -2,7 +2,7 @@
        \tikzsetnextfilename{plot_MWS}
        \begin{center}
        	\begin{tikzpicture}
-       		\draw[very thin, gray, step = 0.5] (-0.9,-0.9) grid (4.9,2.9);
+       		\draw[dotted, very thin, gray, step = 0.5] (-0.9,-0.9) grid (4.9,2.9);
        		\draw[->,thick, black](-1,0) -- (5,0) node[right]{x};
        		\draw[->,thick, black](0,-1) -- (0,3) node[above]{y};
        		\draw[blue,domain = 0.0:4.0, samples=150]   
