--- a/Plots/plot_integral_f.tex
+++ b/Plots/plot_integral_f.tex
@@ -1,9 +1,8 @@
 \begin{figure}[ht]
 	\begin{center}
 		\tikzsetnextfilename{plot_integral_f}
-
 		\begin{tikzpicture}
-			\draw[very thin, gray, step = 0.5] (-0.9,-0.9) grid (4.9,2.9);
+			\draw[dotted, very thin, gray, step = 0.5] (-0.9,-0.9) grid (4.9,2.9);
 			\draw[->,thick, black](-1,0) -- (5,0) node[right]{x};
 			\draw[->,thick, black](0,-1) -- (0,3) node[above]{y};
 			\draw[blue,domain = 0.0:3.14, samples=1000]   
