--- a/Plots/plot_rechteck_integral.tex
+++ b/Plots/plot_rechteck_integral.tex
@@ -1,12 +1,15 @@
 \begin{figure}[ht]
 	\begin{center}
-		\tikzsetnextfilename{taylor_veranschaulichung}
+		\tikzsetnextfilename{plot_rechteck_integral}
 		\begin{tikzpicture}
-			\draw[very thin, gray, step = 0.5] (-0.9,-0.9) grid (4.9,2.9);
+			\draw[dotted, very thin, gray, step = 0.5] (-0.9,-0.9) grid (4.9,2.9);
 			\draw[->,thick, black](-1,0) -- (5,0) node[right]{x};
 			\draw[->,thick, black](0,-1) -- (0,3) node[above]{y};
-			\draw[thick,blue](0,2) -- (4,2) node[right]{c};
-			\draw[green,thick](1,0) rectangle (3.5,2);
+			\draw[thick,blue](0,2) -- (4,2) node[right=0.05,fill=white, inner sep=1pt]{f};
+			\draw[pattern=north west lines, pattern color=green](1,0) rectangle (3.5,2);
+			\node[below=0.05, fill=white,inner sep=1pt] at (1,0) {a};
+			\node[below=0.05, fill=white,inner sep=1pt] at (3.5,0) {b};
+			\node[left=0.05, fill=white,inner sep=1pt] at (0,2) {c};
 		\end{tikzpicture}
 		\caption{Konstante Funktion}
 		\label{fig_int_konst_funk}
