--- a/Plots/monotone_fkt_riemann_intbar.tex
+++ b/Plots/monotone_fkt_riemann_intbar.tex
@@ -2,7 +2,7 @@
 	\begin{center}
 	\tikzsetnextfilename{monotone_fkt_riemann_intbar}
 		\begin{tikzpicture}
-			\draw[very thin, gray, step = 0.5] (0,-0.9) grid (3.4,2.4);
+			\draw[dotted, very thin, gray, step = 0.5] (0,-0.9) grid (3.4,2.4);
 			
 			\draw[->, thick, black](0,-0.5) -- (3.5,-0.5) node[right]{x};
 			\draw[->, thick, black](0.5, -1) -- (0.5, 2.5) node[above]{y};
