--- a/Plots/plot_aufteilung_integral.tex
+++ b/Plots/plot_aufteilung_integral.tex
@@ -2,7 +2,7 @@
 	\begin{center}
 	\tikzsetnextfilename{plot_aufteilung_integral}
 		\begin{tikzpicture}
-			\draw[very thin, gray, step = 0.5] (-0.9,-0.9) grid (4.9,2.9);
+			\draw[dotted, very thin, gray, step = 0.5] (-0.9,-0.9) grid (4.9,2.9);
 			\draw[->,thick, black](-1,0) -- (5,0) node[right]{x};
 			\draw[->,thick, black](0,-1) -- (0,3) node[above]{y};
 			\draw[blue,domain = 0.0:3.14, samples=1000]   
