--- a/Plots/plot_integral_riemannintegral.tex
+++ b/Plots/plot_integral_riemannintegral.tex
@@ -2,7 +2,7 @@
 	\tikzsetnextfilename{plot_integral_riemannintegral}
 	\begin{center}
 		\begin{tikzpicture}
-			\draw[very thin, gray, step = 0.5] (-1.9,-0.9) grid (1.9,3.4);
+			\draw[dotted, very thin, gray, step = 0.5] (-1.9,-0.9) grid (1.9,3.4);
 			\fill[yellow](-1.5,0) rectangle (-0.75,3.25);
 			\fill[orange](-0.75,0) rectangle (0,1.56);
 			\fill[yellow](0,0) rectangle (0.75, 1.56);
