--- a/Plots/plot_integral_zwei_fkt.tex
+++ b/Plots/plot_integral_zwei_fkt.tex
@@ -1,7 +1,7 @@
 \begin{figure}
 	\tikzsetnextfilename{plot_integral_zwei_fkt}
 	\begin{tikzpicture}
-		\draw[very thin, gray, step = 0.5] (-0.9,-0.9) grid (3.9,3.4);
+		\draw[dotted, very thin, gray, step = 0.5] (-0.9,-0.9) grid (3.9,3.4);
 		\draw[blue, domain = 0 :1.5]  
 			plot(\x, \x + 1);
 		\draw[red, domain = 0 : 1.5] plot(\x,2*\x);	
