--- a/Plots/plot_mws_int.tex
+++ b/Plots/plot_mws_int.tex
@@ -3,7 +3,7 @@
 	\begin{tikzpicture}
 		\path[clip] plot (\x,{(2*sin(0.5*\x r)+2)*(1/6)*\x}) -- (1,12);
 		\filldraw[color=blue,fill=yellow] plot[smooth] (\x,{(2*sin(0.5*\x r)+2)*(1/6)*\x});
-		\draw[very thin, gray, step = 0.5] (1.1,-0.4) grid (12.4,3.4);
+		\draw[dotted, very thin, gray, step = 0.5] (1.1,-0.4) grid (12.4,3.4);
 		\draw[->, thick, black] (1,-0.5) -- (12,-0.5) node[right]{x};
 		\draw[->, thick, black] (1,-0.5) --(1,4) node[above]{y};
 		\draw[thick, orange, domain= 1.75:12.25] plot(\x, 1.28);
