--- a/gesamt.tex
+++ b/gesamt.tex
@@ -35,7 +35,8 @@
   calc,%
   fadings,%
   lindenmayersystems,%
-  decorations.markings%
+  decorations.markings,%
+  patterns%
 }
 \usepackage{extarrows}
 \usepackage{physics}
