Neue Vorlesung hinzugefügt

--- a/gesamt.tex
+++ b/gesamt.tex
@@ -149,6 +149,7 @@
 \input{Vorlesungen/vl_23}
 \input{Vorlesungen/vl_24}
 \input{Vorlesungen/vl_25}
+\input{Vorlesungen/vl_26}
 \clearpage
 \printindex
 \end{document}
