--- a/klausurbemerkungen.tex
+++ b/klausurbemerkungen.tex
@@ -8,7 +8,7 @@
 	\item \textcolor{red}{\hyperref[vl_12_satz_02]{Hauptsatz der Differential- und Integral-Rechnung}}
 	\item \textcolor{red}{\hyperref[vl_17_satz_2]{Gleichmäßiger Limes stetiger Funktionen ist stetig}}
 	\item \textcolor{blue}{\hyperref[satz_v_heine_borel]{Satz von Heine-Borel}}
-	\item \textcolor{blue}{Banach'scher Fixpunktsatz}
+	\item \textcolor{blue}{\hyperref[banachscherfixpunktsatz]{Banach'scher Fixpunktsatz}}
 \end{itemize}
 \textcolor{cyan}{Keine Hilfsmittel!}\\
 \textcolor{cyan}{Definitionen werden abgefragt.}
