--- a/Vorlesungen/vl_08.tex
+++ b/Vorlesungen/vl_08.tex
@@ -103,7 +103,7 @@
 	zwischen $\alpha$ und $x_{n-1}$ (also zwischen $\alpha$ und $\beta$) mit 
 	$h^{(n)}(x) = 0$. Damit gilt 
 	\begin{align*}
-		0 = h^{(n)}(x) = f^{(n)}(x) - P^(n)_{n-1, \alpha}(x) - M \cdot n! \cdot 
+		0 = h^{(n)}(x) = f^{(n)}(x) - P'(n)_{n-1, \alpha}(x) - M \cdot n! \cdot 
 		(x-\alpha)^0
 	\end{align*}{}
 	und daher $f^{(n)}(x) = M \cdot n!$
