--- a/Plots/taylor_veranschaulichung.tex
+++ b/Plots/taylor_veranschaulichung.tex
@@ -18,18 +18,18 @@
 
             \draw (7,0.1) -- (7,-0.1);
             \node[below] (c) at (7,0) {\small $x_1$};
-            \node[below = 1.5cm of c](cu){\small $h(x_1)=0$};
+            \node[below = 1.5cm of c](cu){\small $h'(x_1)=0$};
             \draw[dashed] (c) -- (cu);
             \node[below = 0.5 of cu](cmw){{\small MWS}};
 
             \draw (5,0.1) -- (5,-0.1);
             \node[below] (d) at (5,0) {\small $x_2$};
-            \node[below = 1cm of d](du){\small $h(x_2)=0$};
+            \node[below = 1cm of d](du){\small $h'(x_2)=0$};
             \draw[dashed] (d) -- (du); 
 
             \draw (3,0.1) -- (3,-0.1);
             \node[below] (e) at (3,0) {\small $x_3$};
-            \node[below = 0.5cm of e](eu){\small $h(x_3)=0$};
+            \node[below = 0.5cm of e](eu){\small $h^{(3)}(x_3)=0$};
             \draw[dashed] (e) -- (eu);
 
             \draw (bu.south) to[out=230, in=270] (cmw);
