--- a/Vorlesungen/vl_05.tex
+++ b/Vorlesungen/vl_05.tex
@@ -153,7 +153,7 @@ $p(x) = \sum_{l=0}^{n} a_l x^l$ gilt (Summenregel):
 	$g: I_g \rightarrow \mathbb{R}$ sei in $f(x_0)$ differenzierbar und 
 	$f(I_f) \subseteq I_g$. Dann gilt:
 	\begin{equation*}
-	\frac{d g \circ f}{dx}(x_0) = \frac{dg}{dx}(f(x_0)) \cdot \frac{df}{dx}(x_0)
+	\frac{d (g \circ f)}{dx}(x_0) = \frac{dg}{dx}(f(x_0)) \cdot \frac{df}{dx}(x_0)
 	\end{equation*}
 }\end{Satz}
 
@@ -194,7 +194,7 @@ $p(x) = \sum_{l=0}^{n} a_l x^l$ gilt (Summenregel):
 	k-te Ableitung (für $k \in \mathbb{N}$) durch:
 	\begin{align*}
 		f^{(0)} := & f \\
-		f^{(k+1)} := & f^{(k+1)'}
+		f^{(k+1)} := & f^{(k)'}
 	\end{align*}
 	sofern die Ableitungen definiert sind.\\
 	Ist $f^{(k)}: I \rightarrow \mathbb{R}$ für alle $k \in \mathbb{N}$ definiert, 
