--- a/Vorlesungen/vl_08.tex
+++ b/Vorlesungen/vl_08.tex
@@ -46,7 +46,7 @@
 	\begin{align*}
 		f'(\alpha) = P'_{n, \alpha}(\alpha) = \left( \sum_{l = 0}^n l 
 		\cdot \frac{f^l (\alpha)}{l!} \left( x  - \alpha) ^{l-1} \right) \right)
-	\end{align*}\todo{ich vermute, die Summe sollte bei 0 beginnen}
+	\end{align*}
 	und analog: 
 	\begin{align*}
 		f^{(l)} (\alpha) = P_{n, \alpha}^{(l)} = P_{n, \alpha}^{(l)} (\alpha) \\
@@ -103,7 +103,7 @@
 	zwischen $\alpha$ und $x_{n-1}$ (also zwischen $\alpha$ und $\beta$) mit 
 	$h^{(n)}(x) = 0$. Damit gilt 
 	\begin{align*}
-		0 = h^{(n)}(x) = f^{(n)}(x) - P'(n)_{n-1, \alpha}(x) - M \cdot n! \cdot 
+		0 = h^{(n)}(x) = f^{(n)}(x) - P^{(n)'}_{n-1, \alpha}(x) - M \cdot n! \cdot 
 		(x-\alpha)^0
 	\end{align*}{}
 	und daher $f^{(n)}(x) = M \cdot n!$
