--- a/Vorlesungen/vl_09.tex
+++ b/Vorlesungen/vl_09.tex
@@ -48,7 +48,7 @@
 	 \end{align*}
 	 für $l \in \mathbb{N}$: 
 	 \begin{align*}
-		 x - \alpha) = 0 \text{ für } x = \alpha
+		 (x - \alpha) = 0 \text{ für } x = \alpha
 	 \end{align*}
 	 Also: $f^{(l)}(\alpha) = l! \cdot a_l$
 \end{proof}
