--- a/Vorlesungen/vl_06.tex
+++ b/Vorlesungen/vl_06.tex
@@ -161,11 +161,11 @@ Sei $I \subseteq \mathbb{R}$ ein Intervall
 	\emph{lokales Maximum (lokales Minimum)}, falls ein $\delta > 0$ gibt,
 	so dass 
 	\begin{equation*}
-	\forall x \in B_\delta(x_0) : f(x) \leq f(x_0) (f(x) \geq f(x_0)) \text{ gilt.}
+	\forall x \in B_\delta(x_0) : f(x) \leq f(x_0) \; (f(x) \geq f(x_0)) \text{ gilt.}
 	\end{equation*}
 	Gilt:
 	\begin{equation*}
-		f(x) \leq f(x_0) (f(x) \geq f(x_0))
+		f(x) \leq f(x_0) \; (f(x) \geq f(x_0))
 	\end{equation*}
 	 für alle $x \in I$, so sagen wir, dass 
 	$x_0$ ein \emph{globales Maximum (globales Minimum)} ist.
